# automatizare-si-scripting-usm-year03

./: .gitignore  .gitmodules  disk_usage.sh
lab01/: disk_usage.sh  readme.md
lab02/: readme.md
lab02/currency_exchange_rate/: .gitignore  README.md  pyproject.toml
lab02/currency_exchange_rate/src/currency_exchange_rate/: __init__.py  api.py  cli.py  logger_setup.py
lab03/: .env.example  .gitignore  Dockerfile  alternative_currency_exchange_rate.py  cronjob  currency_exchange_rate.py  docker-compose.yaml  docker-compose.yml  dockerfile  entrypoint.sh  notes  readme.md  run_currency_job.sh  run_daily.sh  run_weekly.sh
lab03/currency_exchange_rate/: .gitignore
lab03/currency_exchange_rate/src/currency_exchange_rate/: api.py  cli.py  logger_setup.py  utils.py
lab03/data/: RON-EUR_currency-rate_2025-10-01.json  RON-USD_currency-rate_2025-09-19_2025-09-26.json
lab04/: .env.example  Dockerfile  docker-compose.yml  readme.md
lab05/: Dockerfile.ansible_agent  Dockerfile.test_server  docker-compose.yml  readme.md
lab05/ansible/: deploy_php_project.yml  hosts.ini  setup_test_server.yml
lab05/pipelines/: ansible_setup_pipeline.groovy  php_build_and_test_pipeline.groovy  php_deploy_pipeline.groovy
