[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "currency-exchange-rate"
version = "0.0.1"
description = "talking to lab02prep api and store currency exchange in json"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Artur", email = "example@example.com"}]
classifiers = [
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "requests",
    ]

[project.urls]
Repository = "https://github.com/slendchat/automatizare-si-scripting-usm-year03" 

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
currency-rate = "currency_exchange_rate.cli:main"